# nlptrade

./: .gitignore  pyproject.toml
src/nlptrade/: bot.py  config.json  data_models.py  nlptrade.py  portfolio.py  secrets.json.example  types.py
tests/: test_english_parser.py  test_nlptrade.py
