[project]
name = "nlptrade"
version = "0.1.0"
description = ""
authors = [
    {name = "Jinho",email = "jjh2811@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt (>=4.4.98,<5.0.0)",
    "python-telegram-bot (>=21.4,<22.0.0)",
]

[project.scripts]
nlptrade-cli = "nlptrade.nlptrade:main"
nlptrade-bot = "nlptrade.bot:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
